--- a/public/config/theme.css
+++ b/public/config/theme.css
@@ -1,7 +1,7 @@
 :root {
   --primary: #ebc908;
   --primary-text: #ffffff;
-  --secondary: #b48eb1;
+  --secondary: #e7d37b;
   --secondary-text: #ffffff;
   --accent: #505050;
   --accent-text: #ffffff;
